[package]
name = "brew_book"
version = "0.1.0"
authors = ["Darren Picard <darren.picard@neofinancial.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "^0.4.0"
tokio = "^1.11.0"
serde = "^1.0.130"
serde_json = "^1.0"
simple_logger = "1.13.0"
log = "0.4.14"
lazy_static = "1.4.0"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-config" }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.18-alpha", package = "aws-sdk-dynamodb" }